--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vkey": "~0.0.2",
     "ever": "~0.0.3",
     "raf": "0.0.3",
-    "global": "~2.0.7"
+    "global": "~2.0.7",
+    "xtend": "~2.0.6"
   }
 }
